--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
       <div class="footer">
         <p class="f-title">Jeju</p>
         <p class="f-date">2023.02.10</p>
+        <a href="http://www.cutercounter.com/" target="_blank">
+          <img src="https://www.cutercounter.com/hits.php?id=hrxfqpqa&nd=4&style=1" border="0" alt="website counter"></a>
       </div>
     </div>
   </body>
